<resources>
    <string name="app_name">BeThereOrBeSquare</string>
    <string name="app_title">Be There Or Be Square</string>
    <string name="start_button">Start</string>
    <string name="continue_button">Continue</string>
    <string name="rows">Rows:</string>
    <string name="columns">Columns:</string>
    <string name="rows_input">Enter row count</string>
    <string name="columns_input">Enter column count</string>
    <string name="next_button">Next</string>
    <string name="switch_button">Switch</string>
    <string name="help_text">Values must be whole numbers greater than 0.</string>
    <string name="error_text">There\'s no saved state!</string>
    <string name="draw_view">Field</string>
    <string name="progress">Loading…</string>
    <string name="number">0</string>

    <string name="continue_preferences">continue_preferences</string>
    <string name="continue_key">continue_key</string>
    <string name="columns_key">columns_key</string>
    <string name="rows_key">rows_key</string>

    <integer name="max_rows">50</integer>
    <integer name="max_columns">50</integer>
</resources>