<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextRows"
        android:layout_width="@dimen/textedit_width"
        android:layout_height="@dimen/textedit_height"
        android:gravity="center|center_horizontal"
        android:hint="@string/rows_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewRows"
        app:layout_constraintTop_toTopOf="@+id/textViewRows" />

    <TextView
        android:id="@+id/textViewColumns"
        android:layout_width="@dimen/textview_width"
        android:layout_height="@dimen/textview_height"
        android:gravity="center_horizontal"
        android:text="@string/columns"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextColumns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewRows"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextColumns"
        android:layout_width="@dimen/textedit_width"
        android:layout_height="@dimen/textedit_height"
        android:gravity="center"
        android:hint="@string/columns_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewColumns"
        app:layout_constraintTop_toTopOf="@+id/textViewColumns" />

    <TextView
        android:id="@+id/textViewRows"
        android:layout_width="@dimen/textview_width"
        android:layout_height="@dimen/textview_height"
        android:gravity="center_horizontal"
        android:text="@string/rows"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextRows"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>