<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="289dp"
        android:layout_height="112dp"
        android:layout_marginTop="44dp"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="1dp"
        android:gravity="center|center_horizontal"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="44sp"
        android:contentDescription="@string/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="306dp"
        android:layout_height="76dp"
        android:layout_marginTop="180dp"
        android:text="@string/start_button"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        android:contentDescription="@string/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="317dp"
        android:layout_height="78dp"
        android:layout_marginTop="64dp"
        android:text="@string/continue_button"
        android:textSize="18sp"
        android:contentDescription="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        app:layout_constraintVertical_bias="0.031" />
</androidx.constraintlayout.widget.ConstraintLayout>